# NL2SQL

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
com/nl2sql/: audit_logger.py  console.py  db_session_manager.py  db_view_manager.py  models.py  pipeline.py  settings.py  types.py
com/nl2sql/agent/: generator.py  node.py
com/nl2sql/guardrails/: ast_guardrail.py  base.py  output_guardrail.py  prompt_guardrail.py  query_validation_guardrail.py  schema_guardrail.py  view_guardrail.py
data/: employees.db
tests/: test_base.py  test_pipeline.py  test_schema_guardrails.py
tests/gaurdrail/: test_ast_gaurdrail.py  test_output_gaurdrail.py  test_schema_guardrails.py  test_view_guardrail.py
